import tests from "../modal-image.native.test";

describe("ModalImage test on ios", () => {
  tests();
});
