// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <RCTSafeAreaView>
        <View>
          <View>
            <View>
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <View>
            <View>
              <View>
                <View
                  aspectRatio={1.5}
                >
                  <Gradient
                    degrees={264}
                    height={350}
                    width={700}
                  >
                    <View>
                      <Svg
                        height={191.87817258883248}
                        version="1.1"
                        viewBox="145 50 108 120"
                        width={191.87817258883248}
                      >
                        <G
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <Path
                            d="6a6c07166e9c40e4f62e57af2b507822"
                            fill="#FFFFFF"
                          />
                        </G>
                      </Svg>
                    </View>
                  </Gradient>
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                      }
                    }
                  />
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={1.5}
    >
      <Gradient
        degrees={264}
        height={350}
        width={700}
      >
        <View>
          <Svg
            height={191.87817258883248}
            version="1.1"
            viewBox="145 50 108 120"
            width={191.87817258883248}
          >
            <G
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <Path
                d="6a6c07166e9c40e4f62e57af2b507822"
                fill="#FFFFFF"
              />
            </G>
          </Svg>
        </View>
      </Gradient>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with custom highressize 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <RCTSafeAreaView>
        <View>
          <View>
            <View>
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <View>
            <View>
              <View>
                <View
                  aspectRatio={1.5}
                >
                  <Gradient
                    degrees={264}
                    height={350}
                    width={700}
                  >
                    <View>
                      <Svg
                        height={191.87817258883248}
                        version="1.1"
                        viewBox="145 50 108 120"
                        width={191.87817258883248}
                      >
                        <G
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <Path
                            d="6a6c07166e9c40e4f62e57af2b507822"
                            fill="#FFFFFF"
                          />
                        </G>
                      </Svg>
                    </View>
                  </Gradient>
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                      }
                    }
                  />
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={1.5}
    >
      <Gradient
        degrees={264}
        height={350}
        width={700}
      >
        <View>
          <Svg
            height={191.87817258883248}
            version="1.1"
            viewBox="145 50 108 120"
            width={191.87817258883248}
          >
            <G
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <Path
                d="6a6c07166e9c40e4f62e57af2b507822"
                fill="#FFFFFF"
              />
            </G>
          </Svg>
        </View>
      </Gradient>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
          }
        }
      />
    </View>
  </View>
</View>
`;
